# aula008

./: README.md  df_vendas.parquet  etl.py  pipeline.py  pyproject.toml  utils_log.py
