[tool.poetry]
name = "aula008"
version = "0.1.0"
description = ""
authors = ["alexssandrodamiao <alexssandro.damiao@acertpix.com.br>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pandera = "^0.20.1"
pandas = "^2.2.2"
pyarrow = "^16.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
